--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Auxílio GLP-1</string>
 
-    <!-- Tela principal -->
     <string name="main_subtitle">Este app é apenas um apoio para organizar seus medicamentos GLP-1. Ele não substitui seu médico.</string>
     <string name="main_current_med_title">Medicamentos cadastrados</string>
     <string name="main_btn_add_med">Adicionar medicamento</string>
@@ -12,7 +11,6 @@
 
     <string name="toast_no_meds_export">Nenhum medicamento cadastrado para exportar.</string>
 
-    <!-- Exportar resumo -->
     <string name="export_header_title">Resumo dos medicamentos GLP-1</string>
     <string name="export_header_disclaimer">Este resumo não substitui orientação médica.</string>
     <string name="export_label_med">Medicamento</string>
@@ -25,11 +23,9 @@
     <string name="export_share_subject">Resumo de medicamentos GLP-1</string>
     <string name="export_share_no_app">Nenhum app disponível para compartilhar o resumo.</string>
 
-    <!-- Placeholders -->
     <string name="placeholder_no_name">(sem nome)</string>
     <string name="placeholder_dash">-</string>
 
-    <!-- Cadastro de medicamento -->
     <string name="config_title">Cadastro do medicamento GLP-1</string>
     <string name="config_label_name">Nome do medicamento (ex: Semaglutida)</string>
     <string name="config_label_dose">Dose prescrita (ex: 1 mg por semana)</string>
@@ -41,7 +37,6 @@
     <string name="toast_config_saved">Medicamento salvo com sucesso!</string>
     <string name="toast_config_updated">Medicamento atualizado com sucesso!</string>
 
-    <!-- Detalhes / notas / histórico -->
     <string name="details_title">Detalhes do medicamento</string>
     <string name="details_label_name">Nome:</string>
     <string name="details_label_dose">Dose:</string>
@@ -61,7 +56,6 @@
     <string name="toast_details_edit_error">Erro ao localizar medicamento para edição.</string>
     <string name="history_entry_label">Dose registrada</string>
 
-    <!-- Adapter / diálogos -->
     <string name="dialog_remove_med_title">Remover medicamento</string>
     <string name="dialog_remove_med_message">Deseja remover este medicamento?</string>
     <string name="dialog_yes">Sim</string>
@@ -70,13 +64,11 @@
     <string name="item_frequency_with_value">Frequência: %1$s</string>
     <string name="item_next_with_value">Próxima aplicação: %1$s</string>
 
-    <!-- Notificações -->
     <string name="notif_title">Lembrete GLP-1</string>
     <string name="notif_text">Hora de verificar seus medicamentos GLP-1 e a próxima aplicação.</string>
     <string name="notif_channel_name">Lembretes GLP-1</string>
     <string name="notif_channel_description">Lembretes semanais para seus medicamentos GLP-1.</string>
 
-    <!-- Acompanhamento de peso -->
     <string name="main_btn_weight_tracker">Acompanhamento de peso</string>
     <string name="weight_title">Acompanhamento de peso</string>
     <string name="weight_subtitle">Registre seu peso semanalmente e acompanhe a evolução. Estes dados são apenas informativos e não substituem avaliação clínica.</string>
@@ -94,7 +86,6 @@
     <string name="weight_export_title">Compartilhar histórico de peso</string>
     <string name="weight_item_format">%1$s - %2$.1f kg</string>
 
-    <!-- Diário de sintomas -->
     <string name="main_btn_symptoms">Diário de sintomas</string>
     <string name="symptoms_title">Diário de sintomas</string>
     <string name="symptoms_subtitle">Registre como você se sentiu em relação aos efeitos colaterais mais comuns dos medicamentos GLP-1.</string>
@@ -114,7 +105,6 @@
     <string name="symptoms_export_title">Compartilhar diário de sintomas</string>
     <string name="symptoms_item_format">%1$s - Náusea: %2$d, Cansaço: %3$d, Saciedade: %4$d</string>
 
-    <!-- Registro de injeção -->
     <string name="main_btn_injection">Registrar injeção</string>
     <string name="injection_title">Registro de injeção</string>
     <string name="injection_subtitle">Marque cada aplicação do seu medicamento GLP-1 e acompanhe a rotação dos locais de aplicação.</string>
@@ -142,7 +132,6 @@
     <string name="toast_injection_saved">Aplicação registrada com sucesso.</string>
     <string name="toast_injection_export_no_data">Nenhum dado de injeção para exportar.</string>
 
-    <!-- Recursos educacionais -->
     <string name="education_title">Dicas de Saúde</string>
     <string name="education_subtitle">Informações baseadas em evidências para apoiar sua jornada.</string>
 
@@ -166,7 +155,6 @@
     <string name="tip_5_body">A constipação é um efeito colateral comum. Aumente gradualmente a ingestão de fibras (aveia, frutas com casca, vegetais) junto com o aumento de água.</string>
     <string name="tip_5_source">Fonte: Cleveland Clinic</string>
 
-    <!-- Lembrete de injeção semanal -->
     <string name="reminder_title">Lembrete de injeção</string>
     <string name="reminder_subtitle">Configure um horário fixo para ser lembrado da sua injeção semanal.</string>
     <string name="reminder_med_label">Medicamento para o lembrete:</string>
@@ -180,7 +168,6 @@
     <string name="notification_channel_name">Lembretes de injeção</string>
     <string name="notification_channel_desc">Notificações para lembrar da injeção do medicamento GLP-1.</string>
 
-    <!-- Resumo da semana no dashboard -->
     <string name="dashboard_summary_title">Resumo da semana</string>
     <string name="dashboard_summary_injections_format">Injeções registradas (últimos 7 dias): %1$d</string>
     <string name="dashboard_summary_symptoms_format">Sintomas médios (0–5, últimos 7 dias) — Náusea: %1$.1f | Cansaço: %2$.1f | Saciedade: %3$.1f</string>
@@ -188,19 +175,15 @@
     <string name="dashboard_summary_weight_format">Peso atual: %1$.1f kg / Meta: %2$.1f kg</string>
     <string name="dashboard_summary_weight_no_data">Configure seu peso no quiz inicial ou na tela de peso.</string>
 
-    <!-- Lista de medicamentos -->
     <string name="med_list_empty">Nenhum medicamento cadastrado ainda. Use o botão abaixo para adicionar.</string>
 
-    <!-- Anotações por medicamento -->
     <string name="med_notes_label">Anotações / efeitos (opcional)</string>
     <string name="med_notes_hint">Ex.: dor de cabeça, azia, algo para comentar na próxima consulta.</string>
     <string name="btn_save_notes">Salvar anotações</string>
     <string name="toast_notes_saved">Anotações salvas.</string>
 
-    <!-- Botão metas diárias -->
     <string name="main_btn_daily_goals">Metas diárias</string>
 
-    <!-- Metas diárias -->
     <string name="daily_goals_title">Metas diárias</string>
     <string name="daily_goals_subtitle">Use estas metas como apoio à sua rotina com GLP-1. Ajuste sempre de acordo com a orientação do seu profissional de saúde.</string>
 
@@ -231,5 +214,195 @@
     <string name="notification_daily_goals_text">Toque para registrar água, atividade física e outros hábitos.</string>
     <string name="notification_channel_daily_name">Lembretes de metas diárias</string>
     <string name="notification_channel_daily_desc">Notificações para lembrar de revisar suas metas diárias.</string>
+
+    <string name="quiz_welcome_title">Bem-vindo ao Ozem+</string>
+    <string name="quiz_welcome_subtitle">Seu assistente pessoal para a jornada GLP-1. Vamos configurar seu perfil para começar.</string>
+    <string name="quiz_btn_start">Começar Agora</string>
+    <string name="quiz_step_1_title">Você já utiliza algum medicamento GLP-1?</string>
+    <string name="quiz_opt_yes">Sim, já utilizo</string>
+    <string name="quiz_opt_no">Não, vou começar</string>
+    <string name="quiz_step_2_title">Qual medicamento?</string>
+    <string name="quiz_step_2_subtitle">Selecione o que foi prescrito.</string>
+    <string name="quiz_hint_med_name">Nome do medicamento</string>
+    <string name="quiz_step_3_title">Qual a dosagem?</string>
+    <string name="quiz_step_3_subtitle">Arraste para definir a dose prescrita (mg).</string>
+    <string name="quiz_dose_value_mg">%.2f mg</string>
+    <string name="quiz_dose_value_mg_int">%d mg</string>
+    <string name="quiz_dose_note_mounjaro">Doses comuns: 2.5, 5, 7.5, 10, 12.5, 15 mg</string>
+    <string name="quiz_dose_note_fine">Ajuste fino (limite 5.0 mg)</string>
+    <string name="quiz_step_4_title">Com que frequência?</string>
+    <string name="quiz_freq_daily">Diariamente</string>
+    <string name="quiz_freq_weekly">Semanalmente</string>
+    <string name="quiz_freq_monthly">Mensalmente</string>
+    <string name="quiz_step_5_title">Qual seu sexo biológico?</string>
+    <string name="quiz_step_5_subtitle">Necessário para o cálculo de metabolismo basal.</string>
+    <string name="gender_male">Masculino</string>
+    <string name="gender_female">Feminino</string>
+    <string name="gender_other">Outro</string>
+    <string name="gender_prefer_not_say">Prefiro não dizer</string>
+    <string name="quiz_step_6_title">Quando você nasceu?</string>
+    <string name="quiz_step_7_title">Quais são suas medidas?</string>
+    <string name="quiz_unit_metric">Métrico</string>
+    <string name="quiz_unit_imperial">Imperial</string>
+    <string name="quiz_label_height_cm">Altura (cm)</string>
+    <string name="quiz_label_weight_kg">Peso (kg)</string>
+    <string name="quiz_label_height_ft">Altura</string>
+    <string name="quiz_label_weight_lbs">Peso (lbs)</string>
+    <string name="quiz_step_8_title">Meta Semanal</string>
+    <string name="quiz_step_8_subtitle">Qual seu ritmo ideal de perda de peso?</string>
+    <string name="quiz_weekly_goal_kg_fmt">%.1f kg / semana</string>
+    <string name="quiz_weekly_goal_lbs_fmt">%.1f lbs / semana</string>
+    <string name="quiz_goal_recommended">Recomendado: 0.5 a 1.0 kg</string>
+    <string name="quiz_step_9_title">Atividade Física</string>
+    <string name="act_sedentary">Sedentário\n(Pouco ou nenhum exercício)</string>
+    <string name="act_light">Levemente Ativo\n(Exercício leve 1-3 dias/sem)</string>
+    <string name="act_moderate">Moderadamente Ativo\n(Exercício moderado 3-5 dias/sem)</string>
+    <string name="act_very">Muito Ativo\n(Exercício pesado 6-7 dias/sem)</string>
+    <string name="quiz_step_10_title">Horário da Aplicação</string>
+    <string name="quiz_step_10_subtitle">Configure seu lembrete.</string>
+    <string name="quiz_day_week">Dia da Semana</string>
+    <string name="quiz_day_month">Dia</string>
+    <string name="quiz_time">Horário</string>
+    <string name="quiz_community_title">Junte-se à comunidade</string>
+    <string name="quiz_community_subtitle">Milhares de pessoas já alcançaram seus objetivos com o Ozem+.</string>
+    <string name="quiz_testimonial_1">\"O Ozem+ transformou minha jornada. Perdi 12kg em 3 meses e me sinto outra pessoa!\"</string>
+    <string name="quiz_author_1">- Maria C., usuária há 3 meses</string>
+    <string name="quiz_results_title">Resultados Reais</string>
+    <string name="quiz_results_subtitle">Veja o que é possível alcançar com dedicação e o apoio certo.</string>
+    <string name="quiz_label_before">ANTES</string>
+    <string name="quiz_label_after">DEPOIS</string>
+    <string name="quiz_testimonial_2">\"Nunca imaginei que voltaria a usar minhas roupas antigas. A mudança vai muito além do peso, é saúde e autoestima!\"</string>
+    <string name="quiz_author_2">- Jane P., menos 22kg em 5 meses</string>
+    <string name="quiz_step_name_title">Como te chamamos?</string>
+    <string name="quiz_hint_name">Seu Nome</string>
+    <string name="quiz_step_email_title">Quase pronto!</string>
+    <string name="quiz_step_email_subtitle">Informe seu e-mail para salvar seu perfil.</string>
+    <string name="quiz_hint_email">Seu E-mail</string>
+    <string name="quiz_btn_next">Próximo</string>
+    <string name="quiz_btn_finish">Finalizar</string>
+    <string name="quiz_error_select">Selecione uma opção</string>
+    <string name="quiz_error_med">Selecione o medicamento</string>
+    <string name="quiz_error_required">Obrigatório</string>
+    <string name="quiz_error_freq">Selecione a frequência</string>
+    <string name="quiz_error_gender">Selecione o sexo</string>
+    <string name="quiz_error_activity">Selecione a atividade</string>
+    <string name="quiz_error_day_week">Selecione um dia da semana</string>
+    <string name="quiz_error_email">E-mail inválido</string>
+    <string name="quiz_error_save">Erro ao salvar. Tente novamente.</string>
+
+    <string name="schedule_format_daily">Todos os dias às %s</string>
+    <string name="schedule_format_weekly">Toda %s às %s</string>
+    <string name="schedule_format_monthly">Todo dia %d às %s</string>
+    <string name="separator_at"> às </string>
+    <string name="separator_every_day">Todo dia </string>
+
+    <string name="day_segunda">Segunda</string>
+    <string name="day_terca">Terça</string>
+    <string name="day_quarta">Quarta</string>
+    <string name="day_quinta">Quinta</string>
+    <string name="day_sexta">Sexta</string>
+    <string name="day_sabado">Sábado</string>
+    <string name="day_domingo">Domingo</string>
+    <string name="day_generic">Dia</string>
+
+    <string name="routine_title">Seu Plano Diário</string>
+    <string name="routine_subtitle">Personalizado para sua meta.</string>
+    <string name="routine_cal_title">🔥 Meta Calórica Diária</string>
+    <string name="routine_deficit_fmt">Déficit calculado de %.0f kcal para perder %.1f kg/sem</string>
+    <string name="routine_macros_title">Sugestão de Macros</string>
+    <string name="routine_protein">Proteína</string>
+    <string name="routine_carb">Carboidrato</string>
+    <string name="routine_fat">Gordura</string>
+    <string name="routine_water">💧 Água</string>
+    <string name="routine_activity">🏃 Atividade</string>
+    <string name="routine_schedule_title">Sugestão de Rotina</string>
+    <string name="routine_morning">☕ Manhã</string>
+    <string name="routine_morning_desc">• Beber 500ml de água ao acordar.\n• Café da manhã rico em proteína (ovos, iogurte).\n• Se tomar medicação oral (Rybelsus), jejum de 30min.</string>
+    <string name="routine_lunch">🥗 Almoço</string>
+    <string name="routine_lunch_desc">• Comece pela salada e proteína.\n• Mastigue devagar para perceber a saciedade do GLP-1.\n• Evite líquidos durante a refeição se sentir estômago cheio.</string>
+    <string name="routine_night">🌙 Noite</string>
+    <string name="routine_night_desc">• Jantar leve (evitar frituras).\n• Parar de comer 2h antes de dormir para evitar refluxo.\n• Chá calmante se necessário.</string>
+    <string name="routine_btn_tips">Ver Biblioteca de Dicas Gerais</string>
+    <string name="routine_error_profile">Perfil não encontrado. Refaça o Quiz.</string>
+    <string name="goal_loss_weight">Perda de Peso</string>
+
+    <string name="config_edit_title">Editar Medicamento</string>
+    <string name="config_new_title">Novo Medicamento</string>
+    <string name="config_error_fields">Preencha todos os campos</string>
+    <string name="config_error_freq">Selecione a frequência</string>
+    <string name="config_error_day">Selecione o dia da semana</string>
+    <string name="config_msg_saved">Medicamento salvo!</string>
+    <string name="config_msg_updated">Medicamento atualizado!</string>
+
+    <string name="daily_ingested_fmt">Ingerido: %d / %d ml</string>
+    <string name="daily_exercise_done_fmt">Feito: %d / %d min</string>
+    <string name="daily_calc_success">Calculado com base no seu peso: %dml</string>
+    <string name="daily_error_weight">Configure seu peso no perfil primeiro.</string>
+    <string name="daily_config_saved">Configurações salvas!</string>
+
+    <string name="injection_title_new">Nova Aplicação</string>
+    <string name="injection_suggestion_fmt">Sugestão: %s</string>
+    <string name="injection_last_fmt">Última: %s - %s</string>
+    <string name="injection_history_export_header">Histórico de Injeções\n--------------------------------\n\n</string>
+    <string name="injection_history_export_line_fmt">%s - %s - %s</string>
+    <string name="injection_med_default">Medicamento</string>
+
+    <string name="weight_chart_no_data">Sem dados registrados</string>
+    <string name="weight_history_export_header">Acompanhamento de Peso\n--------------------------------\n\n</string>
+    <string name="weight_history_export_line_fmt">%s - %.1f kg</string>
+
+    <string name="report_title">Relatório Completo</string>
+    <string name="report_generated_fmt">Gerado em: %s</string>
+    <string name="report_current_profile">Perfil Atual</string>
+    <string name="report_current_weight">Peso Atual</string>
+    <string name="report_target">Meta</string>
+    <string name="report_active_meds">Medicamentos Ativos</string>
+    <string name="report_last_injections">Últimas Injeções</string>
+    <string name="report_symptoms_summary">Resumo de Sintomas</string>
+    <string name="report_btn_share">Compartilhar Relatório (Texto)</string>
+    <string name="report_weight_fmt">%.1f kg</string>
+    <string name="report_empty_meds">Nenhum medicamento ativo.</string>
+    <string name="report_empty_injections">Nenhuma injeção registrada.</string>
+    <string name="report_empty_symptoms">Sem registros recentes.</string>
+    <string name="report_export_subject">Meu Relatório Ozem+</string>
+    <string name="report_export_header">RELATÓRIO COMPLETO - OZEM+\nGerado em: %s\n================================\n\n</string>
+    <string name="report_section_meds">[ MEDICAMENTOS ATUAIS ]\n</string>
+    <string name="report_section_weight">[ EVOLUÇÃO DE PESO ]\n</string>
+    <string name="report_section_injections">[ REGISTRO DE INJEÇÕES ]\n</string>
+    <string name="report_section_symptoms">[ DIÁRIO DE SINTOMAS ]\n</string>
+    <string name="report_med_line_fmt">  Dose: %s | Freq: %s\n</string>
+    <string name="report_note_fmt">  Nota: %s\n</string>
+    <string name="report_symptom_line_fmt">  Náusea: %d | Fadiga: %d | Saciedade: %d\n</string>
+    <string name="report_obs_fmt">  Obs: %s\n</string>
+
+    <string name="journey_title">Minha Jornada GLP-1</string>
+    <string name="journey_symptoms_last">Últimos Sintomas</string>
+    <string name="journey_weight_evol">Evolução de Peso</string>
+    <string name="journey_camera_unavailable">Câmera indisponível</string>
+    <string name="journey_photo_saved">Foto salva!</string>
+    <string name="journey_photo_error">Erro ao salvar foto.</string>
+    <string name="journey_days_fmt">%d dias</string>
+    <string name="journey_diff_plus">+%s</string>
+    <string name="journey_diff_minus">-%s</string>
+    <string name="journey_symptoms_empty">0/5</string>
+
+    <string name="gallery_title">Minhas Fotos</string>
+
+    <string name="reminder_notification_channel">Lembretes de Medicamento</string>
+    <string name="reminder_notification_desc">Notificações para aplicar o medicamento</string>
+    <string name="reminder_notification_title">Hora da Aplicação: %s</string>
+    <string name="reminder_notification_text">Lembrete para tomar sua dose de %s</string>
+
+    <string name="app_greeting_hello">Olá!</string>
+    <string name="app_greeting_format">Olá, %s</string>
+    <string name="plan_pro">PRO</string>
+    <string name="plan_free">FREE</string>
+    <string name="weight_placeholder">-- kg</string>
+    <string name="weight_diff_placeholder">0.0 kg</string>
+    <string name="dashboard_weekly_fmt">%d injeções</string>
+    <string name="dashboard_btn_add_med">Adicionar Medicamento</string>
+    <string name="dashboard_no_med">Nenhum cadastrado</string>
+    <string name="dashboard_btn_log_now">Registrar Aplicação Agora</string>
+    <string name="dashboard_next_not_set">Não definida</string>
 
 </resources>
